<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_todos">Todos</string>
    <string name="menu_presentes">Presentes</string>
    <string name="menu_ausentes">Ausentes</string>
    <string name="nome">Nome</string>
    <string name="presente">Presente</string>
    <string name="ausente">Ausente</string>
    <string name="salvar">Salvar</string>
    <string name="remocao_convidado">Excluir Convidado</string>
    <string name="deseja_remover">Deseja remover o usuário?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
</resources>