<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_todos">

    <fragment
        android:id="@+id/nav_todos"
        android:name="com.herbeth.convidados.view.TodosFragment"
        android:label="@string/menu_todos"
        tools:layout="@layout/fragment_todos" />

    <fragment
        android:id="@+id/nav_presentes"
        android:name="com.herbeth.convidados.view.PresenteFragment"
        android:label="@string/menu_presentes"
        tools:layout="@layout/fragment_presente" />

    <fragment
        android:id="@+id/nav_ausentes"
        android:name="com.herbeth.convidados.view.AusenteFragment"
        android:label="@string/menu_ausentes"
        tools:layout="@layout/fragment_ausente" />
</navigation>