<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.ConvidadosFormActivity">

    <TextView
        android:id="@+id/text_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nome" />

    <RadioGroup
        android:id="@+id/radio_presente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome">

        <RadioButton
            android:id="@+id/radio_pressente_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presente" />

        <RadioButton
            android:id="@+id/radio_pressente_nao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ausente" />

    </RadioGroup>

    <Button
        android:id="@+id/button_salva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_presente" />

</androidx.constraintlayout.widget.ConstraintLayout>